--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -259,7 +259,7 @@ LastLevel=/Game/Cats/Map/StartingScreen
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -406,14 +406,14 @@ SoundNodeRandom="\"Object\" \"Object.Random.Weights\" "
 Border="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object\" \"Object.Fill Rules.ColumnFill\" \"Object.Fill Rules.RowFill\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" \"Object.PowerUpData\" "
-Visual="\"Object\" \"Object.PowerUpData\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Menu_C="\"Object\" "
-UserWidget="\"Object\" \"Object.PowerUpData\" "
+UserWidget="\"Object\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Grid Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Grid Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Grid Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
@@ -5134,25 +5134,25 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Blueprint/Component/C_ACT_Attack_AOE
-MRUItem1=/Game/Cats/Widget/PowerUp/PowerUpIcon
-MRUItem2=/Game/Cats/Widget/PowerUp/PowerUpDataObject
-MRUItem3=/Game/Cats/Widget/PowerUp/PowerUpData
-MRUItem4=/Game/Cats/Widget/PowerUp/KarmaType
-MRUItem5=/Game/Cats/Widget/PowerUp/DT_PowerUp
-MRUItem6=/Game/Cats/Widget/PowerUp/SelectPowerUp
-MRUItem7=/Game/Cats/Blueprint/Cat
-MRUItem8=/Game/Cats/Widget/PowerUp/PowerUp
-MRUItem9=/Game/Cats/Widget/InGameUI
-MRUItem10=/Game/Cats/Widget/MouseLifeBar
-MRUItem11=/Game/Cats/Widget/GoodMissionMenu
-MRUItem12=/Game/Cats/Widget/PowerUp/PowerUpDataObject1
-MRUItem13=/Game/Cats/Map/ThirdPersonMap
-MRUItem14=/Game/Cats/Widget/PowerUp/DA_PowerUp
-MRUItem15=/Game/Cats/Widget/PowerUp/DataObject/PowerUpDataObject
-MRUItem16=/Game/Cats/Widget/PowerUp/DataObject/PowerUpDataObject_Attack
-MRUItem17=/Game/Cats/Widget/PowerUp/NewObjectLibrary
-MRUItem18=/Game/Cats/GameMode/MyGameMode
+MRUItem0=/Game/Cats/GameMode/MyGameMode
+MRUItem1=/Game/Cats/Blueprint/Component/C_ACT_Attack_AOE
+MRUItem2=/Game/Cats/Widget/PowerUp/PowerUpIcon
+MRUItem3=/Game/Cats/Widget/PowerUp/PowerUpDataObject
+MRUItem4=/Game/Cats/Widget/PowerUp/PowerUpData
+MRUItem5=/Game/Cats/Widget/PowerUp/KarmaType
+MRUItem6=/Game/Cats/Widget/PowerUp/DT_PowerUp
+MRUItem7=/Game/Cats/Widget/PowerUp/SelectPowerUp
+MRUItem8=/Game/Cats/Blueprint/Cat
+MRUItem9=/Game/Cats/Widget/PowerUp/PowerUp
+MRUItem10=/Game/Cats/Widget/InGameUI
+MRUItem11=/Game/Cats/Widget/MouseLifeBar
+MRUItem12=/Game/Cats/Widget/GoodMissionMenu
+MRUItem13=/Game/Cats/Widget/PowerUp/PowerUpDataObject1
+MRUItem14=/Game/Cats/Map/ThirdPersonMap
+MRUItem15=/Game/Cats/Widget/PowerUp/DA_PowerUp
+MRUItem16=/Game/Cats/Widget/PowerUp/DataObject/PowerUpDataObject
+MRUItem17=/Game/Cats/Widget/PowerUp/DataObject/PowerUpDataObject_Attack
+MRUItem18=/Game/Cats/Widget/PowerUp/NewObjectLibrary
 MRUItem19=/Game/Cats/Widget/PowerUp/PowerUpDataObject_Attack
 
 [MaterialEditor]
