change fog + CorruptedMiaou particle

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -620,7 +620,7 @@ NavModifierComponent="\"Object\" "
 NavRelevantComponent="\"Object\" "
 QuestDogChase_C="\"Object\" "
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
-Info="\"Object\" \"Object.ExponentialHeightFog.Component.Object.FogInscatteringLuminance\" "
+Info="\"Object\" \"Object.ExponentialHeightFog.Component.Object.DirectionalInscatteringLuminance\" "
 NPC_LittleGirl_C="\"Object\" \"Object.Actor.Tags\" "
 BaseNPC_C="\"Object\" \"Object.Actor.Tags\" "
 NewBlueprint_C="\"Object\" "
@@ -752,14 +752,14 @@ C_ACT_CorruptedMiaou_C="\"Object\" "
 Bottle_C="\"Object\" "
 BaseProps_C=
 C_ACT_ProjectileBonus_C="\"Object\" "
-ExponentialHeightFog="\"Object\" \"Object.ExponentialHeightFog.Component.Object.FogInscatteringLuminance\" "
+ExponentialHeightFog="\"Object\" \"Object.ExponentialHeightFog.Component.Object.DirectionalInscatteringLuminance\" "
 ExponentialHeightFogComponent="\"Object\" "
+SkyLight="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_Range.C_ACT_Range
+OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou.C_ACT_CorruptedMiaou
 OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus.C_ACT_ProjectileBonus
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1871,7 +1871,7 @@ CapsuleComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.C
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 SceneComponent=
-SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
+SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 StaticMeshComponent=
@@ -2161,9 +2161,9 @@ C_BaseAction_C=
 C_ACT_Jump_C=
 C_ACT_SummonMice_C=
 C_ACT_BaseMiaou_C=
-C_ACT_CorruptedMiaou_C=
+C_ACT_CorruptedMiaou_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 C_ACT_ProjectileBonus_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
-ExponentialHeightFog=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
+ExponentialHeightFog=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -5195,6 +5195,20 @@ ExponentialHeightFogComponent.Rendering=True
 ExponentialHeightFogComponent.Tags=True
 ExponentialHeightFogComponent.Activation=True
 ExponentialHeightFogComponent.Cooking=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.Visualization=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+NiagaraBakerOutputTexture2D.Settings=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -5312,26 +5326,26 @@ bConvertSceneUnit=False
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Map/ThirdPersonMap
-MRUItem1=/Game/Basic_VFX/Demo/Map/Demo_map
-MRUItem2=/Game/Basic_VFX/Niagara/NS_Basic_15
-MRUItem3=/Game/Basic_VFX/Niagara/NS_Basic_3
-MRUItem4=/Game/Basic_VFX/Niagara/NS_Basic_11
-MRUItem5=/Game/Basic_VFX/Niagara/NS_Basic_12
-MRUItem6=/Game/Basic_VFX/Niagara/NS_Basic_6
-MRUItem7=/Game/Basic_VFX/Niagara/NS_Basic_14
-MRUItem8=/Game/Basic_VFX/Niagara/NS_Basic_8
-MRUItem9=/Game/Basic_VFX/Niagara/NS_Basic_7
-MRUItem10=/Game/Basic_VFX/Niagara/NS_Basic_1
-MRUItem11=/Game/Cats/Blueprint/Component/C_ACT_Range
-MRUItem12=/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus
-MRUItem13=/Game/Cats/Blueprint/Component/C_ACT_Attack
-MRUItem14=/Game/Cats/Blueprint/BreakableProps/BaseProps
-MRUItem15=/Game/Cats/Blueprint/Component/C_ACT_Attack_AOE
-MRUItem16=/Game/Cats/Blueprint/Cat
-MRUItem17=/Game/Cats/GameMode/MyGameMode
-MRUItem18=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
-MRUItem19=/Game/Cats/Blueprint/Component/NewNiagaraSystem
+MRUItem0=/Game/Cats/Assets/Niagara/NS_Basic_15
+MRUItem1=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
+MRUItem2=/Game/Cats/Blueprint/Component/C_ACT_BaseMiaou
+MRUItem3=/Game/Cats/Map/ThirdPersonMap
+MRUItem4=/Game/Basic_VFX/Demo/Map/Demo_map
+MRUItem5=/Game/Basic_VFX/Niagara/NS_Basic_15
+MRUItem6=/Game/Basic_VFX/Niagara/NS_Basic_3
+MRUItem7=/Game/Basic_VFX/Niagara/NS_Basic_11
+MRUItem8=/Game/Basic_VFX/Niagara/NS_Basic_12
+MRUItem9=/Game/Basic_VFX/Niagara/NS_Basic_6
+MRUItem10=/Game/Basic_VFX/Niagara/NS_Basic_14
+MRUItem11=/Game/Basic_VFX/Niagara/NS_Basic_8
+MRUItem12=/Game/Basic_VFX/Niagara/NS_Basic_7
+MRUItem13=/Game/Basic_VFX/Niagara/NS_Basic_1
+MRUItem14=/Game/Cats/Blueprint/Component/C_ACT_Range
+MRUItem15=/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus
+MRUItem16=/Game/Cats/Blueprint/Component/C_ACT_Attack
+MRUItem17=/Game/Cats/Blueprint/BreakableProps/BaseProps
+MRUItem18=/Game/Cats/Blueprint/Component/C_ACT_Attack_AOE
+MRUItem19=/Game/Cats/Blueprint/Cat
 
 [MaterialEditor]
 PrimType=1
@@ -5717,6 +5731,7 @@ None=======
 /Game/Basic_VFX/Niagara/NS_Basic_11.NS_Basic_11=0
 /Game/Basic_VFX/Niagara/NS_Basic_3.NS_Basic_3=0
 /Game/Basic_VFX/Niagara/NS_Basic_15.NS_Basic_15=0
+/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus.C_ACT_ProjectileBonus=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
